# cil-rcc-storage-tracker

./: .dockerignore  .gitignore  COMPLETE_GUIDE.md  RCC_TUTORIAL.md  README.md  create_zip.sh  docker-compose.yml  environment.yml  server_instructions.txt
apps/: README.md
apps/api/: .dockerignore  .env.example  .gitignore  BACKEND_STATUS.md  Dockerfile  README.md  compute_voronoi.py  pyproject.toml  start.sh
apps/api/app/: __init__.py  main.py  settings.py
apps/api/app/db/: __init__.py  clickhouse.py
apps/api/app/models/: __init__.py
apps/api/app/routers/: auth.py  browse.py  computing.py  contents.py  feedback.py  nl_to_sql.py  projections.py  query.py  search.py  snapshots.py  voronoi.py
apps/api/app/services/: gemini.py  guardrails.py  snapshot_storage.py  voronoi_computer.py  voronoi_store.py  voronoi_store.py.bak
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
clickhouse/: Dockerfile  README.md  docker-compose.yml  init-db.sh  init_db.py  requirements.txt
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.testing.yml  docker-compose.yml
docs/: architecture.mdx  database.mdx  deployment.mdx  (+4 more)
scanner/: Cargo.toml  README.md
scanner/.ipynb_checkpoints/: README-checkpoint.md
scanner/benches/: scan_benchmark.rs
scanner/scripts/: analyze_scan.py  cil_scan_computing.sh  daily_pipeline.sh  daily_pipeline_computing.sh  daily_pipeline_pi-mgreenst.sh  daily_publish.sh  daily_publish_computing.sh  daily_publish_pi-mgreenst.sh  download-scans.sh  pi-mgreenst_scan_computing.sh  publish_projections.sh  publish_scans.sh  publish_scans_computing.sh  run_benchmarks.sh  run_pipeline.sh  scan_cil_large.sh  scan_wrapper.py  slurm_scan.sh  validate_duplicates.sh  validation_groups.json
scanner/scripts/.ipynb_checkpoints/: publish_scans-checkpoint.sh  scan_cil_parallel-checkpoint.sh
scanner/src/: lib.rs  main.rs  models.rs  rotating_writer.rs  scanner.rs  utils.rs  writer.rs
scanner/tests/: integration_tests.rs
scanner/tests/fixtures/: generate_fixtures.sh
(+229 files in other folders)
